<?xml version="1.0"?>
<package format="2">
  <name>dynamic_tutorials</name>
  <version>1.0.0</version>
  <description>This sample package demostrates how to set up up Dynamic Reconfigure for a ROS node.</description>
  <maintainer email="baoxij@microsoft.com">Baoxi Jia</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rclcpp</exec_depend>
</package>
